# elastic-parse

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  setup.py
__tests__/utils/: test_xmlparser.py
data/: sitemap.xml
src/elastic_parse/: extract.py
src/elastic_parse/examples/: multithread.py
src/elastic_parse/utils/: configs.py  xmlparser.py
